classes.cppresult.txt
In file included from cur.cpp:13:0:
marina/classes.cpp: In copy constructor 'zuzu<T>::zuzu(const zuzu<T>&)':
marina/classes.cpp:304:10: error: returning a value from a constructor
   return this;
          ^
./check.sh: line 24: ./a.out: No such file or directory
